--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -1,7 +1,77 @@
 ---
-title: Mental models for designers PART TEST
-description: "Consider that for a moment: everything we see around us is assumed to have had a cause and is contingent upon."
-date: Sep 14 2021
+title: CTC Loss
+description: "Understanding CTC Loss and Its Application in Sequence-to-Sequence Models"
+date: Nov 2 2023
 ---
 
-This is an example post. There's another one [here](/posts/example-post).
+# Introduction:
+In the world of machine learning, dealing with variable-length sequences is a common yet challenging problem, particularly when it comes to sequence-to-sequence tasks. This is especially true when the alignment between the input and target sequences is unknown. A popular solution to this issue is the Connectionist Temporal Classification (CTC) loss. In this blog post, we will delve into what CTC loss is, its significance in handling variable-length sequences, and how it can be implemented using PyTorch.
+
+# What is CTC Loss?
+Connectionist Temporal Classification (CTC) is an algorithm designed to solve the problem of sequence alignment in tasks such as speech recognition or handwriting recognition. When dealing with raw audio or text data, the lengths of the input and output sequences can vary significantly, and the exact alignment between them may not be known. CTC provides a way to train models on this type of data without needing a pre-defined alignment.
+
+The Significance of CTC in Sequence-to-Sequence Models:
+CTC is crucial in sequence-to-sequence models as it allows the model to learn the mapping between input sequences and their corresponding output labels, even when the lengths of these sequences vary. The algorithm introduces a special ‘blank’ label that is used to handle repetitions and alignments. This enables the model to output a probability distribution over the possible alignments, and the training process optimizes the model parameters to maximize the likelihood of the correct alignment.
+
+CTC Loss in PyTorch:
+PyTorch provides a built-in implementation of CTC loss, making it straightforward to apply in your models. Below is an example of how to use CTC loss in a PyTorch model:
+
+```
+import torch
+import torch.nn as nn
+
+# Defining a simple RNN model for sequence-to-sequence task
+
+class RNNModel(nn.Module):
+def **init**(self, input_size, hidden_size, output_size, num_layers):
+super(RNNModel, self).**init**()
+self.rnn = nn.LSTM(input_size, hidden_size, num_layers, batch_first=True)
+self.fc = nn.Linear(hidden_size, output_size)
+
+def forward(self, x):
+    out, _ = self.rnn(x)
+    out = self.fc(out)
+    return out
+
+# Initializing the model, loss function, and optimizer
+
+input_size = 10
+hidden_size = 20
+output_size = 5  # Including the 'blank' label
+num_layers = 1
+model = RNNModel(input_size, hidden_size, output_size, num_layers)
+ctc_loss = nn.CTCLoss(blank=0, reduction='mean')
+optimizer = torch.optim.Adam(model.parameters(), lr=0.001)
+
+# Sample input and target sequences
+
+inputs = torch.randn(3, 15, 10)  # (batch_size, seq_len, input_size)
+targets = torch.tensor([[1, 2], [1, 3, 4], [2, 3]])  # Variable length target sequences
+input_lengths = torch.tensor([15, 15, 15])  # Length of each input sequence
+target_lengths = torch.tensor([2, 3, 2])  # Length of each target sequence
+
+# Forward pass
+
+outputs = model(inputs)
+
+# Calculating CTC Loss
+
+loss = ctc_loss(outputs, targets, input_lengths, target_lengths)
+
+# Backward pass and optimization
+
+optimizer.zero_grad()
+loss.backward()
+optimizer.step()
+
+```
+
+In the above example, we define a simple RNN-based model for a sequence-to-sequence task. The RNNModel takes an input sequence, processes it through an LSTM layer followed by a fully connected layer, and outputs a sequence of scores for each class. The CTC loss is then computed using the nn.CTCLoss function. Note that the target sequences are provided as a 1D tensor, and their lengths are specified separately. The ‘blank’ label is specified to be label 0 in this case.
+
+Absolutely, it's important to note a limitation of the PyTorch implementation of CTC loss. One potential drawback is that it does not inherently account for class imbalances or the tendency of models to predict the 'blank' token or the 'passing' token in order to minimize loss. This is a critical consideration for practitioners using CTC loss in scenarios where class distribution is uneven.
+
+# Limitation: Lack of Weighted Output Handling
+
+The PyTorch implementation of CTC loss treats all classes equally, and it does not inherently incorporate the notion of class weights or imbalances. This means that during training, the loss function may not effectively discourage models from predicting the 'blank' token excessively or choosing the 'passing' token as the output. Such behavior can be a concern in cases where the class distribution is imbalanced.
+
+Certainly, a more straightforward approach to address the limitation of the PyTorch CTC loss when dealing with imbalanced class distributions is to consider using categorical cross-entropy loss (often referred to as softmax cross-entropy loss) instead. Categorical cross-entropy loss allows for the straightforward incorporation of class weights and may be a better choice in scenarios where class imbalances are a significant concern.
