--- a/posts/hello-world.mdx
+++ b/posts/hello-world.mdx
@@ -5,7 +5,7 @@ date: Nov 2 2023
 ---
 
 # Introduction:
-In the world of machine learning, dealing with variable-length sequences is a common yet challenging problem, particularly when it comes to sequence-to-sequence tasks. This is especially true when the alignment between the input and target sequences is unknown. A popular solution to this issue is the Connectionist Temporal Classification (CTC) loss. In this blog post, we will delve into what CTC loss is, its significance in handling variable-length sequences, and how it can be implemented using PyTorch.
+In the world of machine learning, dealing with variable-length sequences is a common yet challenging problem, particularly when it comes to sequence-to-sequence tasks. This is especially true when the alignment between the input and target sequences is unknown. This happens faily frequently in NLP and voice recognition so knowing a good solution is well worth the time investment. A popular solution to this issue is the Connectionist Temporal Classification (CTC) loss. In this blog post, we will delve into what CTC loss is, its significance in handling variable-length sequences, and how it can be implemented using PyTorch taking an approach that is more focused on programming than math.
 
 # What is CTC Loss?
 Connectionist Temporal Classification (CTC) is an algorithm designed to solve the problem of sequence alignment in tasks such as speech recognition or handwriting recognition. When dealing with raw audio or text data, the lengths of the input and output sequences can vary significantly, and the exact alignment between them may not be known. CTC provides a way to train models on this type of data without needing a pre-defined alignment.
@@ -23,15 +23,15 @@ import torch.nn as nn
 # Defining a simple RNN model for sequence-to-sequence task
 
 class RNNModel(nn.Module):
-def **init**(self, input_size, hidden_size, output_size, num_layers):
-super(RNNModel, self).**init**()
-self.rnn = nn.LSTM(input_size, hidden_size, num_layers, batch_first=True)
-self.fc = nn.Linear(hidden_size, output_size)
+    def __init__(self, input_size, hidden_size, output_size, num_layers):
+        super(RNNModel, self).**init**()
+        self.rnn = nn.LSTM(input_size, hidden_size, num_layers, batch_first=True)
+        self.fc = nn.Linear(hidden_size, output_size)
 
-def forward(self, x):
-    out, _ = self.rnn(x)
-    out = self.fc(out)
-    return out
+    def forward(self, x):
+        out, _ = self.rnn(x)
+        out = self.fc(out)
+        return out
 
 # Initializing the model, loss function, and optimizer
 
